[SYNCOPE-1866] AuthProfile management in Enduser